--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@
 		<!-- Global theme stylesheet -->
 		<link rel="stylesheet" href="/src/styles/global.css">
 
-		<title>Astro Basics</title>
+		<title>Better Code</title>
 	</head>
 	<body>
 		<slot />
