--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+import '../styles/article.css';
 const { frontmatter } = Astro.props
 ---
 
@@ -15,11 +17,6 @@ const { frontmatter } = Astro.props
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Playfair+Display:wght@700&display=swap"
           rel="stylesheet">
-
-    <!-- Global theme stylesheet -->
-    <link rel="stylesheet" href="/src/styles/global.css">
-
-    <link rel="stylesheet" href="/src/styles/article.css">
 
     <title>{frontmatter.title}</title>
 </head>
